@@ -45,7 +45,6 @@
 	- bug http://www.virtualmin.com/ticket-tracker/bug?bug%5fnumber=333
 
  - EC2 support
-	- dynamic DNS (what if primary IP changes?)
 	- Create AMI?
 	- Need way to specify licence key after install, for use with AMI
 	  'template' which has software but no licence
